--- a/04 - Introduction to CSS/04 External CSS/styles.css
+++ b/04 - Introduction to CSS/04 External CSS/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #EAF6f6;
+    background-color: #EAF6F6;
 }
 
 hr {
@@ -14,9 +14,9 @@ hr {
 }
 
 h1 {
-    color: #66bfbf;
+    color: #66BFBF;
 }
 
 h3 {
-    color: #66bfbf;
+    color: #66BFBF;
 }
