--- a/04 - Introduction to CSS/08 - Classes vs. Ids/css/styles.css
+++ b/04 - Introduction to CSS/08 - Classes vs. Ids/css/styles.css
@@ -14,7 +14,7 @@ img {
 
 */
 
-/**************************CLASS SELECTOR**************************/
+/**************************TAG SELECTOR**************************/
 
 
 .bacon {
