--- a/04 - Introduction to CSS/08 - Classes vs. Ids/css/styles.css
+++ b/04 - Introduction to CSS/08 - Classes vs. Ids/css/styles.css
@@ -6,15 +6,15 @@ h1 {
     font-size: 200px;
 }
 
-/*
 
-img {
-    background-color: red;
+
+img:hover {
+    background-color: gold;
 }
 
-*/
 
-/**************************TAG SELECTOR**************************/
+
+/**************************CLASS SELECTOR**************************/
 
 
 .bacon {
@@ -23,4 +23,16 @@ img {
 
 .broccoli {
     background-color: red;
+}
+
+.circular {
+    border-radius: 100%;
+}
+
+
+/**************************ID SELECTOR**************************/
+
+
+#heading {
+    color: blue;
 }
