--- a/05 - Intermediate CSS/05 - CSS Display Property/css/styles.css
+++ b/05 - Intermediate CSS/05 - CSS Display Property/css/styles.css
@@ -5,3 +5,23 @@ body {
 h1 {
     margin-top: 0%;
 }
+
+.top-container {
+    background-color: #E4F9F5;
+}
+
+.middle-container {
+    background-color: red;
+    width: 200px;
+    height: 200px;
+}
+
+.bottom-container {
+    background-color: blue;
+    width: 200px;
+    height: 200px;
+}
+
+.pro {
+    text-decoration: underline;
+}
