--- a/05 - Intermediate CSS/07 - CSS Static and Relative Positioning/css/styles.css
+++ b/05 - Intermediate CSS/07 - CSS Static and Relative Positioning/css/styles.css
@@ -1,27 +1,26 @@
-body {
-    margin: 0%;
-}
-
-h1 {
-    margin-top: 0%;
-}
-
-.top-container {
-    background-color: #E4F9F5;
-}
-
-.middle-container {
+.red {
+    height: 100px;
+    width: 100px;
     background-color: red;
-    width: 200px;
-    height: 200px;
+    display: inline-block;
+    position: relative;
+    left: 200px;
 }
 
-.bottom-container {
+.blue {
+    height: 100px;
+    width: 100px;
     background-color: blue;
-    width: 200px;
-    height: 200px;
+    display: inline-block;
+    position: relative;
+    right: 100px;
 }
 
-.pro {
-    text-decoration: underline;
+.yellow {
+    height: 100px;
+    width: 100px;
+    background-color: yellow;
+    display: inline-block;
+    position: relative;
+    right: 100px;
 }
