--- a/05 - Intermediate CSS/08 - Absolute positioning/css/styles.css
+++ b/05 - Intermediate CSS/08 - Absolute positioning/css/styles.css
@@ -2,26 +2,35 @@ body {
     margin: 0%;
 }
 
-h1 {
-    margin-top: 0%;
+.container {
+    position: relative;
+    height: 300px;
+    width: 300px;
+    background-color: gray;
 }
 
-.top-container {
-    background-color: #E4F9F5;
-}
-
-.middle-container {
+.red {
+    height: 100px;
+    width: 100px;
     background-color: red;
-    width: 200px;
-    height: 200px;
+    position: absolute;
+    right: 0%;
+    
 }
 
-.bottom-container {
+.blue {
+    height: 100px;
+    width: 100px;
     background-color: blue;
-    width: 200px;
-    height: 200px;
+    position: absolute;
+    left: 100px;
+    top: 0%;
 }
 
-.pro {
-    text-decoration: underline;
+.yellow {
+    height: 100px;
+    width: 100px;
+    background-color: yellow;
+    position: fixed;
+    top: 0%;
 }
