--- a/05 - Intermediate CSS/10 - Font Styling in Our Personal Site/css/styles.css
+++ b/05 - Intermediate CSS/10 - Font Styling in Our Personal Site/css/styles.css
@@ -1,16 +1,24 @@
 body {
     margin: 0%;
     text-align: center;
+    font-family: 'Merriweather', serif;
 }
 
 h1 {
     margin-top: 0%;
+    font-family: 'Sacramento', cursive;
+}
+
+h2 {
+    font-family: 'Montserrat', sans-serif;
+}
+
+h3 {
+    font-family: 'Montserrat', sans-serif;
 }
 
 .top-container {
     background-color: #E4F9F5;
-    position: relative;
-    padding-top: 100px;
 }
 
 .middle-container {
@@ -30,13 +38,13 @@ h1 {
 }
 
 .top-cloud {
-    position: absolute;
-    right: 300px;
-    top: 50px;
+    position: relative;
+    margin-top: 80px;
+    margin-left: 40%;
 }
 
 .bottom-cloud {
-    position: absolute;
-    left: 300px;
-    bottom: 300px;
+    position: relative;
+    margin-top: 20px;
+    margin-right: 40%;
 }
