--- a/05 - Intermediate CSS/13 - CSS Sizing/css/styles.css
+++ b/05 - Intermediate CSS/13 - CSS Sizing/css/styles.css
@@ -5,11 +5,13 @@ body {
 }
 
 h1 {
-    margin-top: 0%;
+    font-size: 562.5%;
+    margin-top: 50% auto 0% auto;
     font-family: 'Sacramento', cursive;
 }
 
 h2 {
+    font-size: 2.5rem;
     font-family: 'Montserrat', sans-serif;
 }
 
