--- a/05 - Intermediate CSS/16 - Font Properties Challenge 3 - Change the Line Height/css/styles.css
+++ b/05 - Intermediate CSS/16 - Font Properties Challenge 3 - Change the Line Height/css/styles.css
@@ -9,6 +9,7 @@ h1 {
     color: #66BFBF;
     margin-top: 50% auto 0% auto;
     font-family: 'Sacramento', cursive;
+    line-height: 2;
 }
 
 h2 {
