--- a/05 - Intermediate CSS/18 - CSS Float and Clear/css/styles.css
+++ b/05 - Intermediate CSS/18 - CSS Float and Clear/css/styles.css
@@ -35,6 +35,13 @@ a {
     color: black;
 }
 
+.skill-row {
+    width: 50%;
+    margin: 100px auto 100px auto;
+    text-align: left;
+    line-height: 200%;
+}
+
 .bottom-container {
     color: black;
 }
@@ -53,4 +60,18 @@ a {
     position: relative;
     margin-top: 20px;
     margin-right: 40%;
+}
+
+.code-img {
+    width: 25%;
+    border-radius: 100%;
+    float: left;
+    margin-right: 30px;
+}
+
+.chilli-img {
+    width: 25%;
+    border-radius: 100%;
+    float: right;
+    margin-left: 30px;
 }
