--- a/05 - Intermediate CSS/13 - CSS Sizing/css/styles.css
+++ b/05 - Intermediate CSS/13 - CSS Sizing/css/styles.css
@@ -6,7 +6,7 @@ body {
 
 h1 {
     font-size: 5.625rem;
-    margin-top: 50% auto 0% auto;
+    margin: 50% auto 0% auto;
     font-family: 'Sacramento', cursive;
 }
 
