--- a/06 - Introduction to Bootstrap 4/14 - Styling Our Website Challenges and Solutions/css/styles.css
+++ b/06 - Introduction to Bootstrap 4/14 - Styling Our Website Challenges and Solutions/css/styles.css
@@ -1,3 +1,7 @@
+body {
+    font-family: 'Montserrat', sans-serif;
+}
+
 h1 {
     font-family: 'Montserrat', sans-serif;
     font-size: 3rem;
@@ -11,4 +15,5 @@ h1 {
 
 #title {
     background-color: #ff4c68;
+    color: #ffffff;
 }
