css navbar update

--- a/06 - Introduction to Bootstrap 4/14 - Styling Our Website Challenges and Solutions/css/styles.css
+++ b/06 - Introduction to Bootstrap 4/14 - Styling Our Website Challenges and Solutions/css/styles.css
@@ -17,3 +17,15 @@ h1 {
     background-color: #ff4c68;
     color: #ffffff;
 }
+
+/* Navigation Bar */
+
+.navbar {
+    padding-bottom: 4.5rem;
+}
+
+.navbar-brand {
+    font-family: 'Ubuntu';
+    font-size: 2.5rem;
+    font-weight: bold;
+}
