--- a/06 - Introduction to Bootstrap 4/14 - Styling Our Website Challenges and Solutions/css/styles.css
+++ b/06 - Introduction to Bootstrap 4/14 - Styling Our Website Challenges and Solutions/css/styles.css
@@ -25,7 +25,7 @@ h1 {
 }
 
 .navbar-brand {
-    font-family: 'Ubuntu';
+    font-family: 'Ubuntu', sans-serif;
     font-size: 2.5rem;
     font-weight: bold;
 }
