--- a/06 - Introduction to Bootstrap 4/14 - Styling Our Website Challenges and Solutions/css/styles.css
+++ b/06 - Introduction to Bootstrap 4/14 - Styling Our Website Challenges and Solutions/css/styles.css
@@ -21,11 +21,20 @@ h1 {
 /* Navigation Bar */
 
 .navbar {
-    padding-bottom: 4.5rem;
+    padding: 0 0 4.5rem;
 }
 
 .navbar-brand {
     font-family: 'Ubuntu', sans-serif;
     font-size: 2.5rem;
     font-weight: bold;
+}
+
+.nav-item {
+    padding: 0 18px;
+}
+
+.nav-link {
+    font-size: 1.2rem;
+    font-family: 'Montserrat-Light';
 }
