--- a/06 - Introduction to Bootstrap 4/15 - Bootstrap Challenge 1/css/styles.css
+++ b/06 - Introduction to Bootstrap 4/15 - Bootstrap Challenge 1/css/styles.css
@@ -9,13 +9,33 @@ h1 {
     font-weight: 900;
 }
 
-.container-fluid {
-    padding: 3% 15%;
+h3 {
+    font-family: 'Montserrat-Bold', sans-serif;
+    font-size: 1.5rem;
+    line-height: 1.5;
+    font-weight: 800;
 }
 
 #title {
     background-color: #ff4c68;
     color: #ffffff;
+}
+
+#features {
+    text-align: center;
+    margin-top: 25px;
+}
+
+.features-h3 {
+    margin: 10px 0 8px 0;
+}
+
+.features-paragraph {
+    color: #8f8f8f;
+}
+
+.container-fluid {
+    padding: 3% 15%;
 }
 
 /* Navigation Bar */
@@ -51,4 +71,30 @@ h1 {
     width: 60%;
     transform: rotate(25deg);
     margin-left: 75px;
+}
+
+/* Fontawesome Icons */
+
+.fa-circle-check {
+    color: #ef8172;
+}
+
+.fa-bullseye {
+    color: #ef8172;
+}
+
+.fa-heart {
+    color: #ef8172;
+}
+
+.fa-circle-check:hover {
+    color: #ff4c68;
+}
+
+.fa-bullseye:hover {
+    color: #ff4c68;
+}
+
+.fa-heart:hover {
+    color: #ff4c68;
 }
