--- a/06 - Introduction to Bootstrap 4/16 - Solution to Bootstrap Challenge 1/css/styles.css
+++ b/06 - Introduction to Bootstrap 4/16 - Solution to Bootstrap Challenge 1/css/styles.css
@@ -10,32 +10,22 @@ h1 {
 }
 
 h3 {
-    font-family: 'Montserrat-Bold', sans-serif;
+    font-family: 'Montserrat';
     font-size: 1.5rem;
-    line-height: 1.5;
     font-weight: 800;
 }
 
-#title {
-    background-color: #ff4c68;
-    color: #ffffff;
-}
-
-#features {
-    text-align: center;
-    margin-top: 25px;
-}
-
-.features-h3 {
-    margin: 10px 0 8px 0;
-}
-
-.features-paragraph {
+p {
     color: #8f8f8f;
 }
 
 .container-fluid {
     padding: 3% 15%;
+}
+
+#title {
+    background-color: #ff4c68;
+    color: #ffffff;
 }
 
 /* Navigation Bar */
@@ -73,28 +63,22 @@ h3 {
     margin-left: 75px;
 }
 
-/* Fontawesome Icons */
+/* Features Section */
 
-.fa-circle-check {
+#features {
+    padding: 7% 15%;
+}
+
+.feature-box {
+    text-align: center;
+    padding: 2%;
+}
+
+.icon {
     color: #ef8172;
+    margin-bottom: 1rem;
 }
 
-.fa-bullseye {
-    color: #ef8172;
-}
-
-.fa-heart {
-    color: #ef8172;
-}
-
-.fa-circle-check:hover {
-    color: #ff4c68;
-}
-
-.fa-bullseye:hover {
-    color: #ff4c68;
-}
-
-.fa-heart:hover {
+.icon:hover {
     color: #ff4c68;
 }
