--- a/07 - Intermediate Bootstrap/01 - The Bootstrap Carousel Part 1/css/styles.css
+++ b/07 - Intermediate Bootstrap/01 - The Bootstrap Carousel Part 1/css/styles.css
@@ -98,3 +98,13 @@ p {
     background-color: #ef8172;
     color: #ffffff;
 }
+
+.testimonials-image {
+    width: 10%;
+    border-radius: 100%;
+    margin: 20px;
+}
+
+#press {
+    background-color: #ef8172;
+}
