press seciton update

--- a/07 - Intermediate Bootstrap/01 - The Bootstrap Carousel Part 1/css/styles.css
+++ b/07 - Intermediate Bootstrap/01 - The Bootstrap Carousel Part 1/css/styles.css
@@ -107,4 +107,11 @@ p {
 
 #press {
     background-color: #ef8172;
+    text-align: center;
+    padding-bottom: 3%;
+}
+
+.press-logo {
+    width: 15%;
+    margin: 0 20px 50px 20px;
 }
