--- a/07 - Intermediate Bootstrap/02 - The Bootstrap Carousel Part 2/css/styles.css
+++ b/07 - Intermediate Bootstrap/02 - The Bootstrap Carousel Part 2/css/styles.css
@@ -9,6 +9,13 @@ h1 {
     font-weight: 900;
 }
 
+h2 {
+    font-family: 'Montserrat';
+    font-size: 3rem;
+    line-height: 1.5;
+    font-weight: 600;
+}
+
 h3 {
     font-family: 'Montserrat';
     font-size: 1.5rem;
@@ -81,4 +88,30 @@ p {
 
 .icon:hover {
     color: #ff4c68;
+}
+
+/* Testimonials Section */
+
+#testimonials {
+    padding: 7% 15%;
+    text-align: center;
+    background-color: #ef8172;
+    color: #ffffff;
+}
+
+.testimonials-image {
+    width: 10%;
+    border-radius: 100%;
+    margin: 20px;
+}
+
+#press {
+    background-color: #ef8172;
+    text-align: center;
+    padding-bottom: 3%;
+}
+
+.press-logo {
+    width: 15%;
+    margin: 0 20px 50px 20px;
 }
