css update for carousel P02

--- a/07 - Intermediate Bootstrap/02 - The Bootstrap Carousel Part 2/css/styles.css
+++ b/07 - Intermediate Bootstrap/02 - The Bootstrap Carousel Part 2/css/styles.css
@@ -93,7 +93,6 @@ p {
 /* Testimonials Section */
 
 #testimonials {
-    padding: 7% 15%;
     text-align: center;
     background-color: #ef8172;
     color: #ffffff;
@@ -103,6 +102,10 @@ p {
     width: 10%;
     border-radius: 100%;
     margin: 20px;
+}
+
+.carousel-item{
+    padding: 7% 15%;
 }
 
 #press {
