css final update for z-index & stacking order

--- a/07 - Intermediate Bootstrap/04 - The CSS Z-Index and Stacking Order/css/styles.css
+++ b/07 - Intermediate Bootstrap/04 - The CSS Z-Index and Stacking Order/css/styles.css
@@ -74,6 +74,11 @@ p {
 
 #features {
     padding: 7% 15%;
+    background-color: white;
+    z-index: 1;
+    position: relative;
+    bottom: 125px;
+    margin-bottom: -125px;
 }
 
 .feature-box {
