css test for media query

--- a/07 - Intermediate Bootstrap/05 - Media Query Breakpoints/css/styles.css
+++ b/07 - Intermediate Bootstrap/05 - Media Query Breakpoints/css/styles.css
@@ -142,3 +142,10 @@ p {
 .pricing-column {
     padding: 3% 2%;
 }
+
+@media (max-width: 1028px){
+    .title-image {
+        position: static;
+        transform: rotate(0);
+    }
+}
